                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 15-09-2006 changed: grabbing of the next song in partymode speed up.
 - 14-09-2006 fixed: seeking in mpeg1 files using dvdplayer caused video to halt. (bug is really in libmpeg2, but work around in place for now)
 - 14-09-2006 changed: Behaviour of Play/Host buttons under various circumstances in Kai.
 - 14-09-2006 fixed: hddsmart request coused a "hang" on request!
 - 14-09-2006 fixed: [ 1551670 ] switch fullscreen hang in system info
 - 13-09-2006 fixed: [ 1275340 ] PCDVDROM always display the directory of first inserted disc
 - 13-09-2006 fixed: on a new smartxx pwmcontrol request, the internal rgb settings needs a reset
 - 13-09-2006 fixed: Wrong button focus if masterlock is cancelled after going to Settings->Masterlock.
 - 13-09-2006 changed: Removed wraparound in Kai lists (listcontrolex)
 - 13-09-2006 fixed: [ 1503867 ] cdg doesn't follow mp3.
 - 13-09-2006 fixed: [ 1520931 ] Custom movie thumbnail ignored when viewing from cast.
 - 12-09-2006 fixed: make sure there is no raw font's available to mplayer to load into memory when using ttf fonts for subs
 - 12-09-2006 changed: switch to standard memcpy/set since fast_memcpy/set is generally alot slower than standard xdk versions.
 - 12-09-2006 fixed: cancelation of big files didn't work for rars.
 - 12-09-2006 changed: make xbmc log when a delete or rename fails
 - 12-09-2006 fixed: mplayer would stall for 2 secs on seek when in gui.
 - 11-09-2006 fixed: audio hickup when switching from fullscreen
 - 11-09-2006 fixed: hopefully the kai play/host buttons behave better now.
 - 11-09-2006 fixed: mockup with slideshow screensaver random and general slideshow random.